--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,13 @@
 
   background-color: #242424;
 }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+*:before,
+*:after {
+  box-sizing: border-box;
+}
