--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+.wrapper {
+  border: dashed 2px red;
+
+  height: 100vh;
+  height: 100dvh;
+  width: 100vw;
+  width: 100dvw;
 }
 
-*:before,
-*:after {
-  box-sizing: border-box;
+.inner-wrapper {
+  border: dashed 1px green;
 }
