--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,6 @@
   border: dashed 2px cyan;
 
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
 }
 
 .card-container {
@@ -30,11 +28,11 @@
 
 .card-container:nth-child(1) {
   background: blue;
-  grid-column: span 2;
-  grid-row: span 2;
+  grid-column: 1 / 3;
+  grid-row: 1 / 3;
 }
 
 .card-container:nth-child(8) {
   background: orange;
-  grid-column: span 2;
+  grid-column: 3 / 5;
 }
