--- a/src/App.css
+++ b/src/App.css
@@ -25,13 +25,31 @@
   opacity: 50%;
 }
 
-.card-container:nth-child(1) {
-  background: blue;
-  grid-column: 1 / 3;
-  grid-row: 1 / 3;
+@media (max-width: 300px) {
+  .inner-wrapper {
+    border: dashed 2px green;
+  }
 }
 
-.card-container:nth-child(8) {
-  background: orange;
-  grid-column: 3 / 5;
+@media (max-width: 650px) {
+  .inner-wrapper {
+    grid-template-rows: repeat(8, 250px);
+  }
+  .card-container:nth-child(n) {
+    background-color: blue;
+    grid-column: 1 / 2;
+  }
+}
+
+@media (min-width: 650px) {
+  .card-container:nth-child(1) {
+    background: blue;
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+  }
+
+  .card-container:nth-child(8) {
+    background: orange;
+    grid-column: 3 / 5;
+  }
 }
