--- a/src/App.css
+++ b/src/App.css
@@ -13,28 +13,63 @@
   height: 90dvh;
   width: 90vw;
   width: 90dvw;
-
-  border: dashed 2px cyan;
+  /* border: dashed 2px cyan; */
 
   display: grid;
+  grid-template-rows: repeat(3, 1fr);
 }
 
 .card-container {
+  width: 100%;
+  height: 100%;
   background: red;
-  border: solid 1px white;
+  position: relative;
+  overflow: hidden;
+  /* border: solid 1px white; */
   opacity: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
-@media (max-width: 300px) {
-  .inner-wrapper {
-    border: dashed 2px green;
-  }
+/* .card-container:nth-child(1) {
+  background-image: url("./assets/images/img1.jpg");
 }
+.card-container:nth-child(2) {
+  background-image: url("./assets/images/img2.jpg");
+}
+.card-container:nth-child(3) {
+  background-image: url("./assets/images/img3.jpg");
+}
+.card-container:nth-child(4) {
+  background-image: url("./assets/images/img4.jpg");
+}
+.card-container:nth-child(5) {
+  background-image: url("./assets/images/img5.jpg");
+}
+.card-container:nth-child(6) {
+  background-image: url("./assets/images/img6.jpg");
+}
+.card-container:nth-child(7) {
+  background-image: url("./assets/images/img7.jpg");
+}
+.card-container:nth-child(8) {
+  background-image: url("./assets/images/img8.jpg");
+} */
 
 @media (max-width: 650px) {
   .inner-wrapper {
     grid-template-rows: repeat(8, 250px);
   }
+
+  .inner-wrapper {
+    gap: 10px;
+  }
+
+  .card-container {
+    border-radius: 25px;
+  }
+
   .card-container:nth-child(n) {
     background-color: blue;
     grid-column: 1 / 2;
